--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,6 @@ main {
 
 /*Footer*/
 footer {
-  height: 50px;
-  background-image: url(../img/big-data-7645200_1280.jpg);
+  height: 3rem;
+  width: 100%;
 }
